--- a/style.css
+++ b/style.css
@@ -66,11 +66,14 @@ html, body {
 }
 
 #textcenter h1 {
-    font-size: 90px;
+    font-size: 70px;
     font-weight: 900;
-    color: #006400; /* Dark green color */
-    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.3); /* Text shadow for better contrast */
+    color: #026902; /* Change to green color */
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.3); /* Keep text shadow for better contrast */
+    line-height: 1; /* Adjust line height for a tighter appearance */
+    margin-top: 10px; /* Adjust margin for spacing */
 }
+    
 
 
 
@@ -146,16 +149,59 @@ html, body {
     background-position: center;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 768px) {
     #main {
         flex-direction: column;
     }
-    #main #left {
+
+    #left {
         width: 100%;
-        height: 250%;
+        height: auto;
+        position: relative;
     }
-    #main #right {
+
+    #textcenter {
+        position: static;
+        margin-top: 20px;
+        transform: none;
+    }
+
+    #profile-pic {
+        width: 80px;
+        height: 80px;
+        margin-bottom: 10px;
+    }
+
+    #textcenter h1 {
+        font-size: 50px;
+    }
+
+    #textcenter p {
+        font-size: 14px;
+    }
+
+    #textcenter a {
+        font-size: 16px;
+    }
+
+    #lnav {
+        display: flex;
+        justify-content: space-between;
         width: 100%;
-        height: 790px;
+        padding: 20px 30px 10px; /* Adjusted padding */
+    }
+    
+
+    #lnav i {
+        font-size: 24px;
+        margin-left: 10px;
+    }
+
+    #left #lnavr a {
+        font-size: 12px;
+    }
+
+    #right {
+        display: none;
     }
 }
