--- a/style.css
+++ b/style.css
@@ -39,14 +39,14 @@ html, body {
 #lnavr i {
     color: black;
     font-size: 20px;
-    margin-left: 20px; /* Adjust spacing as needed */
+    margin-left: 20px; 
 }
 
 #left {
     position: relative;
     width: 40%;
     height: 100%;
-    background-color: #F5F5DC; /* Soft Beige */
+    background-color: #F5F5DC; 
 }
 
 
@@ -68,9 +68,9 @@ html, body {
 #textcenter h1 {
     font-size: 100px;
     font-weight: 900;
-    color: #0a8540; /* Darker green color */
+    color: #0a8540; 
     text-align: center;
-    font-family: 'Roboto', sans-serif; /* Modern sans-serif font */
+    font-family: 'Roboto', sans-serif; 
 }
 
 
